--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,9 @@
 .display-flex{
     display:flex;
 }
+.text-primary{
+    color:#FF900E;
+}
 /* dark 02 */
 .text-gray{
     color:#424242;
@@ -28,6 +31,17 @@
     font-weight:600;
     border-radius: 8px;
     border:none;
+}
+main{
+    max-width:1240;
+    margin:0 auto;
+}
+main > section{
+    margin-top:130px;
+}
+.section-title{
+    font-size:2.8rem;
+    font-weight:700;
 }
 /* header styles */
 
@@ -66,9 +80,70 @@
 .banner-image{
     width:100%;
 }
+/* team and features related styles */
+.teams{
+    align-items:center;
+}
+.team-img-container{
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap:24px;
+}
+.our-features{
+    margin-left:130px;
+    max-width:530px;
+}
+#quick-list{
+    font-weight:500;
+}
+/* some fact related styles */
+.facts-container{
+    display:grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+.fact-card{
+    border:1px solid #FF900E;
+    width:240px;
+    height:240px;
+    border-radius: 8px;
+    text-align: center;
+    align-items:center;
+    justify-content: center;
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight:600;
+    margin-top:5px;
+    margin-bottom:10px;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight:600;
+    margin-top:10px;
+}
+.fact-description{
+    max-width:540px;
+}
 /* responsive media quary */
 @media screen and (max-width:576px){
-    .navbar, .nav-links{
+    .navbar, 
+    .nav-links, 
+    .teams{
         flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .our-features{
+        margin-left: 20px;
+    }
+}
+/* medium size device */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin-left:50px auto;
     }
 }
