--- a/styles/style.css
+++ b/styles/style.css
@@ -96,6 +96,40 @@ main > section{
 #quick-list{
     font-weight:500;
 }
+/* feature section related styles */
+.features{
+    gap:140px;
+}
+#feature-section-title{
+      border-left:5px solid #FF900E ;
+      padding-left: 20px;
+}
+.feature-card{
+    padding:30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom:20px;
+}
+.feature-card .feature-title{
+    font-weight:600;
+    font-size: 1.25rem;
+    margin-top:0px;
+    margin-bottom:0px;
+}
+#experience-badge{
+    padding:45px 42px;
+    font-size:1.5rem;
+    font-weight:700;
+    margin-left:-100px;
+    margin-top:-100px;
+}
+#experience-year{
+    font-weight:700;
+    font-size:4rem;
+}
+.featured-architect img{
+    width:100%;
+}
 /* some fact related styles */
 .facts-container{
     display:grid;
@@ -124,20 +158,49 @@ main > section{
 .fact-description{
     max-width:540px;
 }
+/* sponsor related styles */
+.sponsor-info{
+    max-width:540px;
+    margin:50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display:grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+.sponsor-companies img{
+    filter:grayscale(100%);
+}
 /* responsive media quary */
 @media screen and (max-width:576px){
     .navbar, 
     .nav-links, 
+    .features,
     .teams{
         flex-direction: column;
     }
-    .team-img-container{
-        grid-template-columns: repeat(1, 1fr);
+    .team-img-container, 
+    .facts-container, 
+    .sponsor-companies{
+        grid-template-columns:repeat(1, 1fr);
+    }
+    .facts-container{
+        justify-items: center;
+        gap:24px;
+    }
+    .sponsor-companies{
+        justify-items: center;
+        gap:50px;
     }
     .our-features{
         margin-left: 20px;
     }
+    #experience-badge{
+        margin-top:20px;
+        margin-left:20px;
+    }
 }
+
 /* medium size device */
 @media screen and (min-width:576px) and (max-width:992px) {
     .teams{
@@ -145,5 +208,10 @@ main > section{
     }
     .our-features{
         margin-left:50px auto;
+    }
+    .sponsor-companies, .facts-container{
+        grid-template-columns: repeat(2, 1fr);
+        gap:50px;
+        justify-items: center;
     }
 }
